--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
   <body>
     <div>
       <nav class="navbar navbar-light" style="border-color: black; background-color: #3399ff">
-        <a class="navbar-brand"> <img src="kodiobika.github.io\logo.png" alt="Shoutbid" height="30"> </a>
+        <a class="navbar-brand"> <img src="ShoutBid\public\logo.png" alt="Shoutbid" height="30"> </a>
         <form class="form-inline">
           <input class="form-control mr-sm-2" type="search" placeholder="Find your favorites!" aria-label="Search">
           <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
@@ -30,28 +30,28 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active" style="opacity: 0.8">
-            <img class="d-block w-100" src="kodiobika.github.io/david.PNG" alt="David">
+            <img class="d-block w-100" src="ShoutBid/public/david.PNG" alt="David">
             <div class="carousel-caption d-none d-md-block">
               <a class="creator" href="#"><button type="button" class="btn btn-primary btn-lg" style="border-color:black;"><div>MAKE A BID</div></button></a>
               <div class="upsell">Get a shoutout on David's vlog!</div>
             </div>
           </div>
           <div class="carousel-item" style="opacity: 0.8">
-            <img class="d-block w-100" src="kodiobika.github.io/scott.PNG" alt="Scott">
+            <img class="d-block w-100" src="ShoutBid/public/scott.PNG" alt="Scott">
             <div class="carousel-caption d-none d-md-block">
               <a class="creator" href="#"><button type="button" class="btn btn-primary btn-lg" style="border-color:black;"><div>MAKE A BID</div></button></a>
               <div class="upsell">Have Scotty make a rap about you!</div>
             </div>
           </div>
           <div class="carousel-item" style="opacity: 0.8">
-            <img class="d-block w-100" src="kodiobika.github.io/jason.PNG" alt="Jason">
+            <img class="d-block w-100" src="ShoutBid/public/jason.PNG" alt="Jason">
             <div class="carousel-caption d-none d-md-block">
               <a class="creator" href="#"><button type="button" class="btn btn-primary btn-lg" style="border-color:black;"><div>MAKE A BID</div></button></a>
               <div class="upsell">Help Jason feed his kids!</div>
             </div>
           </div>
           <div class="carousel-item" style="opacity: 0.8">
-            <img class="d-block w-100" src="kodiobika.github.io/cody_and_noel.PNG" alt="CodyNoel">
+            <img class="d-block w-100" src="ShoutBid/public/cody_and_noel.PNG" alt="CodyNoel">
             <div class="carousel-caption d-none d-md-block">
               <a class="creator" href="#"><button type="button" class="btn btn-primary btn-lg" style="border-color:black;"><div>MAKE A BID</div></button></a>
               <div class="upsell">Get roasted by Cody and Noel!</div>
