added partials to show ejs example

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,13 +14,7 @@
   </head>
   <body>
     <div>
-      <nav class="navbar navbar-light" style="border-color: black; background-color: #3399ff">
-        <a class="navbar-brand"> <img src="logo.png" alt="Shoutbid" height="30"> </a>
-        <form class="form-inline">
-          <input class="form-control mr-sm-2" type="search" placeholder="Find your favorites!" aria-label="Search">
-          <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      </nav>
+      <% include partials/header %>
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
