--- a/views/creator.ejs
+++ b/views/creator.ejs
@@ -7,21 +7,14 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <link rel="stylesheet" href="site.css">
-    <link rel="stylesheet" href="my.css">
-    <link rel="stylesheet" href="creator.css">
+    <link rel="stylesheet" href="stylesheets/site.css">
+    <link rel="stylesheet" href="stylesheets/my.css">
+    <link rel="stylesheet" href="stylesheets/creator.css">
     <title></title>
   </head>
   <body>
-      <nav class="navbar navbar-light" style="border-color: black; background-color: #3399ff">
-        <a class="navbar-brand"> <img src="ShoutBid\public\logo.png" alt="Shoutbid" height="30"> </a>
-        <form class="form-inline">
-          <input class="form-control mr-sm-2" type="search" placeholder="Find your favorites!" aria-label="Search">
-          <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      </nav>
+      <% include partials/header %>
       <div id="greenbar">
-
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="" alt="Card image cap">
