views changes to show kodis wondering work

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,14 +38,14 @@
             </div>
           </div>
           <div class="carousel-item" style="opacity: 0.8">
-            <img class="d-block w-100" src="jason.PNG" alt="Jason">
+            <img class="d-block w-100" src="jason.png" alt="Jason">
             <div class="carousel-caption d-none d-md-block">
               <a class="creator"><button type="button" class="btn btn-primary btn-lg" style="border-color:black;"><div>MAKE A BID</div></button></a>
               <div class="upsell">Help Jason feed his kids!</div>
             </div>
           </div>
           <div class="carousel-item" style="opacity: 0.8">
-            <img class="d-block w-100" src="cody_and_noel.PNG" alt="CodyNoel">
+            <img class="d-block w-100" src="cody_and_noel.png" alt="CodyNoel">
             <div class="carousel-caption d-none d-md-block">
               <a class="creator"><button type="button" class="btn btn-primary btn-lg" style="border-color:black;"><div>MAKE A BID</div></button></a>
               <div class="upsell">Get roasted by Cody and Noel!</div>
