--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-light" style="border-color: black; background-color: #3399ff">
   <a class="navbar-brand"> <img src="logo.png" alt="Shoutbid" height="30"> </a>
+  <a href="/register" class="navbar-brand">register</a>
   <form class="form-inline">
     <input class="form-control mr-sm-2" type="search" placeholder="Find your favorites!" aria-label="Search">
     <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
