slight overall changes. pull for working DB insertion.

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,18 @@
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="stylesheets/creator.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+  <!-- we got bootstrap locally so can be changing soon -->
+  <link rel="stylesheet" href="stylesheets/site.css">
+  <link rel="stylesheet" href="stylesheets/my.css">
+  <title>xd</title>
+</head>
 <nav class="navbar navbar-light" style="border-color: black; background-color: #3399ff">
-  <a class="navbar-brand"> <img src="logo.png" alt="Shoutbid" height="30"> </a>
-  <a href="/register" class="navbar-brand">register</a>
+  <a class="navbar-brand" href="/"> <img src="logo.png" alt="Shoutbid" height="30"> </a>
+  <a href="/register" class="navbar-brand">Register</a>
   <form class="form-inline">
     <input class="form-control mr-sm-2" type="search" placeholder="Find your favorites!" aria-label="Search">
     <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
