--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -14,7 +14,7 @@
         <label for="email">Email Address: </label>
         <input id="email" type="text" name="email"><br>
 
-        <label for="usernmae">Username: </label>
+        <label for="username">Username: </label>
         <input id="username" type="text" name="username"><br>
 
         <label for="password">Password: </label>
