--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -6,10 +6,10 @@
         <input type="radio" name="userStatus" value="false"> Content Absorber <br>
 
         <label for="first">First Name: </label>
-        <input id="first" type="text" name="first"><br>
+        <input id="first" type="text" name="firstName"><br>
 
         <label for="email">Last Name: </label>
-        <input id="email" type="text" name="last"><br>
+        <input id="email" type="text" name="lastName"><br>
 
         <label for="email">Email Address: </label>
         <input id="email" type="text" name="email"><br>
