--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
     <% include partials/header %>
-    <form action="/" method="post">
-        <input type="radio" name="userStatus" value="true"> Content Creator <br>
-        <input type="radio" name="userStatus" value="false"> Content Absorber <br>
+    <script src="filledout.js"></script>
+    <p id="filledout"></p>
+    <form action="/" method="post" onsubmit="return filledout()" class="form">
+        <input type="radio" name="userStatus" value="true" id="cCreator"> Content Creator <br>
+        <input type="radio" name="userStatus" value="false" id="cAbsorber"> Content Absorber <br>
 
         <label for="first">First Name: </label>
         <input id="first" type="text" name="firstName"><br>
 
         <label for="email">Last Name: </label>
-        <input id="email" type="text" name="lastName"><br>
+        <input id="last" type="text" name="lastName"><br>
 
         <label for="email">Email Address: </label>
         <input id="email" type="text" name="email"><br>
