--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,28 +12,28 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active" style="opacity: 0.8">
-            <img class="d-block w-100" src="david.png" alt="David">
+            <img class="d-block w-100" src="indexpics/david.png" alt="David">
             <div class="carousel-caption d-none d-md-block">
               <a class="creator"><button type="button" class="btn btn-primary btn-lg" style="border-color:black;"><div>MAKE A BID</div></button></a>
               <div class="upsell">Get a shoutout on David's vlog!</div>
             </div>
           </div>
           <div class="carousel-item" style="opacity: 0.8">
-            <img class="d-block w-100" src="scott.png" alt="Scott">
+            <img class="d-block w-100" src="indexpics/scott.png" alt="Scott">
             <div class="carousel-caption d-none d-md-block">
               <a class="creator"><button type="button" class="btn btn-primary btn-lg" style="border-color:black;"><div>MAKE A BID</div></button></a>
               <div class="upsell">Have Scotty make a rap about you!</div>
             </div>
           </div>
           <div class="carousel-item" style="opacity: 0.8">
-            <img class="d-block w-100" src="jason.png" alt="Jason">
+            <img class="d-block w-100" src="indexpics/jason.png" alt="Jason">
             <div class="carousel-caption d-none d-md-block">
               <a class="creator"><button type="button" class="btn btn-primary btn-lg" style="border-color:black;"><div>MAKE A BID</div></button></a>
               <div class="upsell">Help Jason feed his kids!</div>
             </div>
           </div>
           <div class="carousel-item" style="opacity: 0.8">
-            <img class="d-block w-100" src="cody_and_noel.png" alt="CodyNoel">
+            <img class="d-block w-100" src="indexpics/cody.png" alt="CodyNoel">
             <div class="carousel-caption d-none d-md-block">
               <a class="creator"><button type="button" class="btn btn-primary btn-lg" style="border-color:black;"><div>MAKE A BID</div></button></a>
               <div class="upsell">Get roasted by Cody and Noel!</div>
