moving client-side js scripts to folder

--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <% include partials/header %>
-  <script src="filledout.js"></script>
+  <script src="js/filledout.js"></script>
   <p id="filledout"></p>
   <form action="/" method="post" onsubmit="return filledout()" class="form">
     <input type="radio" name="userStatus" value="true" id="cCreator"> Content Creator <br>
