--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,13 +1,12 @@
 <head>
-  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- Bootstrap CSS -->
+
   <link rel="stylesheet" href="stylesheets/creator.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-  <!-- we got bootstrap locally so can be changing soon -->
   <link rel="stylesheet" href="stylesheets/site.css">
   <link rel="stylesheet" href="stylesheets/my.css">
+  <!-- can really add most css ^^^^ into one file.. -->
+  <link rel="stylesheet" href="bs/css/bootstrap.min.css">
   <title>xd</title>
 </head>
 <nav class="navbar navbar-light" style="border-color: black; background-color: #3399ff">
