changed textboxes to type:password, + some shorter code

--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -20,10 +20,10 @@
     <input id="username" type="text" name="username"><br>
 
     <label for="password">Password: </label>
-    <input id="password" type="text" name="password"><br>
+    <input id="password" type="password" name="password"><br>
 
     <label for="cpassword">Confirm Password: </label>
-    <input id="cpassword" type="text" name="passwordConfirm"><br>
+    <input id="cpassword" type="password" name="passwordConfirm"><br>
 
     <input type="submit">
   </form>
