--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -6,26 +6,26 @@
     <p id="filledout"></p>
     <form action="/" method="post" onsubmit="return filledout()" class="form">
       <div class="form-group">
-        <input type="radio" class="form-control" name="userStatus" value="true" id="cCreator"> Content Creator <br>
-        <input type="radio" class="form-control" name="userStatus" value="false" id="cAbsorber"> Content Absorber <br>
+        <label class="radio-inline"><input type="radio" name="userStatus" value="true" id="cCreator"> Content Creator </label>
+        <label class="radio-inline"><input type="radio" name="userStatus" value="false" id="cAbsorber"> Content Absorber </label><br>
 
         <label for="first">First Name: </label>
-        <input id="first" type="text" class="form-control" name="firstName"><br>
+        <input id="first" type="text" class="form-control" name="firstName" placeholder="First Name"><br>
 
         <label for="email">Last Name: </label>
-        <input id="last" type="text" class="form-control" name="lastName"><br>
+        <input id="last" type="text" class="form-control" name="lastName" placeholder="Last Name"><br>
 
         <label for="email">Email Address: </label>
-        <input id="email" type="text" class="form-control" name="email"><br>
+        <input id="email" type="text" class="form-control" name="email" placeholder="E-mail"><br>
 
         <label for="username">Username: </label>
-        <input id="username" type="text" class="form-control" name="username"><br>
+        <input id="username" type="text" class="form-control" name="username" placeholder="Username"><br>
 
         <label for="password">Password: </label>
-        <input id="password" type="password" class="form-control" name="password"><br>
+        <input id="password" type="password" class="form-control" name="password" placeholder="Password"><br>
 
         <label for="cpassword">Confirm Password: </label>
-        <input id="cpassword" type="password" class="form-control" name="passwordConfirm"><br>
+        <input id="cpassword" type="password" class="form-control" name="passwordConfirm" placeholder="Confirm Password"><br>
 
         <input type="submit">
       </div>
