bootstrap stuff, looks okay

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <% include partials/header %>
   <body>
     <% include partials/carousel %>
-    <% include partials/bootstrap %>
     <script src="js/my.js"></script>
+    <p>testing beneath carousel</p>
   </body>
 </html>
