--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
   <% include partials/header %>
-  <form action="/" method="post" class="form">
-    <label for="username">Username: </label>
-    <input id="username" type="text" name="username"><br>
+  <div class="container">
+  <p id="invalid"></p>
+    <form action="/" method="post" class="form">
+      <label for="username">Username: </label>
+      <input id="username" type="text" class="form-control" name="username" placeholder="Username"><br>
 
-    <label for="password">Password: </label>
-    <input id="password" type="password" name="password"><br>
-    <input type="submit">
+      <label for="password">Password: </label>
+      <input id="password" type="password" class="form-control" name="password" placeholder="Password"><br>
+
+      <button type="submit" class="btn btn-success">Log-in</button>
+    </form>
+  </div>
 </html>
