--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <!-- <div class="container"> -->
-    <% include partials/header %>
+  <% include partials/header %>
+  <div class="container">
     <script src="js/filledout.js"></script>
     <p id="filledout"></p>
     <form action="/" method="post" onsubmit="return filledout()" class="form">
       <div class="form-group">
-        <label class="radio-inline"><input type="radio" name="userStatus" value="true" id="cCreator"> Content Creator </label>
-        <label class="radio-inline"><input type="radio" name="userStatus" value="false" id="cAbsorber"> Content Absorber </label><br>
+        <label for="userStatus">Please select one of the following: </label><br>
+        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+          <label class="btn btn-secondary">
+            <input type="radio" name="userStatus" id="cCreator" value="true"> Content Creator
+          </label>
+          <label class="btn btn-secondary">
+            <input type="radio" name="userStatus" id="cAbsorber" value="false"> Content Absorber
+          </label>
+        </div><br><br>
 
         <label for="first">First Name: </label>
         <input id="first" type="text" class="form-control" name="firstName" placeholder="First Name"><br>
@@ -27,8 +34,8 @@
         <label for="cpassword">Confirm Password: </label>
         <input id="cpassword" type="password" class="form-control" name="passwordConfirm" placeholder="Confirm Password"><br>
 
-        <input type="submit">
+        <button type="submit" class="btn btn-success">Register</button>
       </div>
     </form>
-  <!-- </div> -->
+  </div>
 </html>
