--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,21 @@
   <body>
     <% include partials/carousel %>
     <script src="js/my.js"></script>
+    <style type="text/css" media="screen"> .gr_grid_container { /* customize grid container div here. eg: width: 500px; */ } .gr_grid_book_container { /* customize book cover container div here */ float: left; width: 39px; height: 60px; padding: 0px 0px; overflow: hidden; } </style><div id="gr_grid_widget_1533071842"><!-- Show static html as a placeholder in case js is not enabled - javascript include will override this if things work --> 	<div id="gr_group_widget_703139">
+		<div style="border: 2px solid #EBE8D5; border-radius:10px; padding: 10px">
+        <a style="font-family:verdana,arial,helvetica,sans-serif;color: #666600;font-size:14px;" rel="nofollow" href="https://www.goodreads.com/group/show/703139-something-really-pretentious?utm_medium=api&amp;utm_source=group_widget">Something Really Pretentious</a>    	<br style="clear:both"/>
+    	<a title="Something Really Pretentious" style="float: left; padding-right: 10px" rel="nofollow" href="https://www.goodreads.com/group/show/703139-something-really-pretentious?utm_medium=api&amp;utm_source=group_widget"><img border="0" width="75" alt="Something Really Pretentious" src="https://images.gr-assets.com/groups/1533071465p3/703139.jpg" /></a>
+    	<span style="color: #999;font-size:0.8em">2 members<br/></span>
+    	<span style="font-size:0.8em">The Something Really Pretentious book club can only be accessed by marvinites.</span><br style="clear:both"/>
+		  <div class="gr_grid_container">
+				<h3>Books we've read</h3>
+				<br style="clear: both"/><br/><a class="gr_grid_branding" style="font-size: .9em; color: #382110; text-decoration: none; float: right; clear: both" rel="nofollow" href="https://www.goodreads.com/group/show/703139-something-really-pretentious?utm_medium=api&amp;utm_source=group_widget">View this group on Goodreads &raquo;</a>
+		  	<noscript><br/>Share <a href="http://www.goodreads.com">book reviews</a> and ratings with Something Really Pretentious, and even join a <a href="http://www.goodreads.com/group/">book club</a> on Goodreads.</noscript>
+				<br style="clear: both"/>
+		  </div>
+		</div>
+	</div>
+</div><script src="https://www.goodreads.com/group/widget/703139?cover_size=&num_books=&order=&shelf=&sort=&widget_id=1533071842" type="text/javascript" charset="utf-8"></script>
     <p>testing beneath carousel</p>
   </body>
 </html>
