--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 <html>
   <% include partials/header %>
   <div class="container">
-    <form action="/" method="post" class="form">
+    <form action="/login" method="post" class="form">
       <label for="username">Username: </label>
       <input id="username" type="text" class="form-control" name="username" placeholder="Username"><br>
 
