--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,9 +11,12 @@
 </head>
 <nav class="navbar navbar-light" style="border-color: black; background-color: #3399ff">
   <a class="navbar-brand" href="/"> <img src="logo.png" alt="Shoutbid" height="30"> </a>
-  <a href="/register" class="navbar-brand"><button class="btn btn-secondary my-2 my-sm-0"><b>Register</b></button></a>
-  <a href="/login" class="navbar-brand"><button class="btn btn-secondary my-2 my-sm-0"><b>Log-in</b></button></a>
-  
+  <% if (user){%>
+    <a href="/logout" class="navbar-brand"><button class="btn btn-secondary my-2 my-sm-0"><b>Log-Out</b></button></a>
+  <%  } else { %>
+    <a href="/register" class="navbar-brand"><button class="btn btn-secondary my-2 my-sm-0"><b>Register</b></button></a>
+    <a href="/login" class="navbar-brand"><button class="btn btn-secondary my-2 my-sm-0"><b>Log-in</b></button></a>
+  <% } %>
   <form class="form-inline">
     <input class="form-control mr-sm-2" type="search" placeholder="Find your favorites!" aria-label="Search">
     <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
