--- a/views/startbid.ejs
+++ b/views/startbid.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <link rel="stylesheet" href="stylesheets/description.css">
   <% include partials/header %>
   <div class="container">
     <form action="/" method="post" onsubmit="return startingwar()" class="form">
@@ -24,7 +25,7 @@
         </div><br><br>
 
         <label for="description">Auction Description: </label>
-        <input id="description" type="text"placeholder="Description"><br>
+        <input class="descriptionBox" id="description" type="text" placeholder="Description"><br>
 
         <label for="time">Time Limit (Hours): </label>
         <input id="last" type="number" min="1" max="144" placeholder="Time"><br>
