--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -2,9 +2,7 @@
 <html>
   <% include partials/header %>
   <div class="container">
-    <script src="js/filledout.js"></script>
-    <p id="filledout"></p>
-    <form action="/" method="post" onsubmit="return filledout()" class="form">
+    <form action="/" method="post" class="form">
       <div class="form-group">
         <label for="userStatus">Please select one of the following: </label><br>
         <div class="btn-group btn-group-toggle" data-toggle="buttons">
