--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,7 @@
     <a href="/register" class="navbar-brand"><button class="btn btn-secondary my-2 my-sm-0"><b>Register</b></button></a>
     <a href="/login" class="navbar-brand"><button class="btn btn-secondary my-2 my-sm-0"><b>Log-in</b></button></a>
   <% } %>
-  <form class="form-inline">
+  <form class="form-inline" action="/search" method="post">
     <input class="form-control mr-sm-2" type="search" placeholder="Find your favorites!" aria-label="Search">
     <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
   </form>
