added other pages

--- a/views/bidwar.ejs
+++ b/views/bidwar.ejs
@@ -1,6 +1,12 @@
 <html>
   <% include partials/header %>
     <p>
-        Suck my willie billie, cause you've started a bidwar!
+        Bid description can go here
+    </p>
+
+    <h1>Time left</h1>
+    <h2>Highest Bid (Or some other relevant info depending on auction type</h2>
+    <p> Place Bid:
+    <input class="form-control" type="number" min="1" placeholder="">
     </p>
 </html>
