--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,7 +21,7 @@
     <a href="/login" class="navbar-brand"><button class="btn btn-secondary my-2 my-sm-0"><b>Log-in</b></button></a>
   <% } %>
   <form class="form-inline" action="/search" method="post">
-    <input class="form-control mr-sm-2" type="search" placeholder="Find your favorites!" aria-label="Search">
+    <input class="form-control mr-sm-2" id="search" name="search" type="search" placeholder="Find your favorites!" aria-label="Search">
     <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
   </form>
   <% include bootstrap %>
